[gd_scene load_steps=19 format=3 uid="uid://dth2xkw87mtwm"]

[ext_resource type="Script" path="res://player/player.gd" id="1_a7y8v"]
[ext_resource type="Resource" uid="uid://d1rtgcv253tl5" path="res://player/resources/player1_inputs.tres" id="2_maebw"]
[ext_resource type="Script" path="res://custom_stuff/hit_and_hurt_box/hurtbox.gd" id="4_gy0jc"]
[ext_resource type="Script" path="res://player/body.gd" id="4_pbvd6"]
[ext_resource type="Shader" path="res://player/colorflash.gdshader" id="5_fy4w8"]
[ext_resource type="PackedScene" uid="uid://cbtrogwycneft" path="res://vfx/trail_vfx.tscn" id="6_de123"]
[ext_resource type="Gradient" uid="uid://ccr0bqso5icc5" path="res://player/resources/player1_colorgradient.tres" id="6_u1ddk"]
[ext_resource type="AudioStream" uid="uid://bwtg824lfsynt" path="res://assets/audio/effects/low-engine-hum-72529.ogg" id="8_p3kwn"]
[ext_resource type="Script" path="res://player/ani_manager.gd" id="9_oh3ug"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dmu1y"]
resource_local_to_scene = true
shader = ExtResource("5_fy4w8")
shader_parameter/white_flash = false
shader_parameter/red_flash = false
shader_parameter/gold_flash = false
shader_parameter/white_color = Color(1, 1, 1, 1)
shader_parameter/red_color = Color(0.706, 0.125, 0.165, 1)
shader_parameter/gold_color = Color(0.976, 0.639, 0.106, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_y0nrd"]
radius = 51.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m0rva"]
size = Vector2(80, 112)

[sub_resource type="Animation" id="Animation_toxoe"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Polygon2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Polygon2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 8)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Polygon2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Polygon2D:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Polygon2D:material:shader_parameter/white_flash")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Polygon2D:material:shader_parameter/red_flash")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_a8ex1"]
resource_name = "ammo_flash"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Polygon2D:material:shader_parameter/red_flash")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.19),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("Polygon2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.19),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 8), Vector2(-18, -8), Vector2(22, 36), Vector2(42, -38), Vector2(-27, 40), Vector2(0, 0), Vector2(0, 8)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Polygon2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.1, 0.133333, 0.19),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0718174, -0.135661, 0.0810147, 0.0]
}

[sub_resource type="Animation" id="Animation_duop2"]
resource_name = "ammo_refill"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Polygon2D:material:shader_parameter/gold_flash")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.19),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Polygon2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.19),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.3, 0.7), Vector2(0.7, 1.3), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_3e8t2"]
resource_name = "hit_flash"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Polygon2D:material:shader_parameter/white_flash")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.19),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("Polygon2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.19),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 8), Vector2(-18, -8), Vector2(22, 36), Vector2(42, -38), Vector2(-27, 40), Vector2(0, 0), Vector2(0, 8)]
}

[sub_resource type="Animation" id="Animation_0wqxx"]
resource_name = "shoot"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Polygon2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 8), Vector2(0, 12), Vector2(0, 8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Polygon2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6hrdo"]
resource_local_to_scene = true
_data = {
"RESET": SubResource("Animation_toxoe"),
"ammo_flash": SubResource("Animation_a8ex1"),
"ammo_refill": SubResource("Animation_duop2"),
"hit_flash": SubResource("Animation_3e8t2"),
"shoot": SubResource("Animation_0wqxx")
}

[node name="Player" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1_a7y8v")
input = ExtResource("2_maebw")

[node name="Polygon2D" type="Polygon2D" parent="."]
z_index = 1
material = SubResource("ShaderMaterial_dmu1y")
position = Vector2(0, 8)
color = Color(0.909804, 0.415686, 0.45098, 1)
antialiased = true
polygon = PackedVector2Array(-40, 0, 0, -80, 40, 0, 0, 40)
script = ExtResource("4_pbvd6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_y0nrd")

[node name="BulletSpawnLocation" type="Marker2D" parent="."]
position = Vector2(0, -68)
gizmo_extents = 140.4

[node name="HurtBox" type="Area2D" parent="." node_paths=PackedStringArray("hurtbox_owner")]
script = ExtResource("4_gy0jc")
hurtbox_owner = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(1, -11)
shape = SubResource("RectangleShape2D_m0rva")
debug_color = Color(0.858328, 0.364151, 0, 0.42)

[node name="CPUParticles2D2" parent="." instance=ExtResource("6_de123")]
visible = false
position = Vector2(0, 32)
particle_flag_align_y = true

[node name="Trails_VFX" parent="." instance=ExtResource("6_de123")]
position = Vector2(0, 29)
particle_flag_align_y = true
color_ramp = ExtResource("6_u1ddk")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_p3kwn")
volume_db = 2.438
autoplay = true
bus = &"SFX"

[node name="AniManager" type="Node" parent="."]
script = ExtResource("9_oh3ug")

[node name="Shoot" type="AnimationPlayer" parent="AniManager"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_6hrdo")
}

[node name="AmmoFlash" type="AnimationPlayer" parent="AniManager"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_6hrdo")
}
playback_default_blend_time = 0.01

[node name="AmmoRefill" type="AnimationPlayer" parent="AniManager"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_6hrdo")
}

[node name="Hit" type="AnimationPlayer" parent="AniManager"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_6hrdo")
}
